Switched to https://github.com/create-dmg/create-dmg